Fix forms in navbar when collapsed (mobile viewport) - by ensuring the form is visible and the inputs can be focused

--- a/frontend/app/assets/stylesheets/archivesspace/header.less
+++ b/frontend/app/assets/stylesheets/archivesspace/header.less
@@ -220,3 +220,18 @@ header .inset-label {
   }
 }
 
+@media (max-width: 979px) {
+  .login-dropdown {
+    .session-actions.dropdown-toggle {
+      display: none;
+    }
+    .dropdown-menu {
+      display: block !important;
+    }
+  }
+  .select-a-repository {
+    .dropdown-menu {
+      display: block !important;
+    }
+  }
+}
